# pyqt6-magic-shop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: seed.json
docs/: DECISIONS.md  MENTOR_NOTES.md
src/magic_shop/: __init__.py  __main__.py  app.py  db.py  game_logic.py  models.py  repositories.py  services.py
src/magic_shop/ui/: arcade_dialog.py  main_window.py  widgets.py
tests/: test_db.py  test_game_logic.py  test_services.py
